fix monospace font in seqreport

--- a/src/html/pelement.css
+++ b/src/html/pelement.css
@@ -1,6 +1,8 @@
 *                 { font-family: Verdana, Arial;
                     font-size: 10pt; }
 
+TT, TT *          { font-family: monospace; }
+
 BODY              { background: #F8F8F0;
                     font-size: 10pt; }
 
